[package]
name = "rs"
version = "0.1.0"
authors = ["Jérôme Guéry <jerome.guery@gmail.com>"]
description = "RS project"
homepage = "https://github.com/jsagfr/rs"

[dependencies]
zmq = "0.8"
rmp-serde = "0.13.7"
serde = "1.0"
serde_derive = "1.0"
rand = "0.3"
nalgebra = "0.13"
clap = "2.28"

[features]
default = [ "nalgebra/serde-serialize" ]
 