[package]
name = "rs"
version = "0.1.0"
authors = ["Jérôme Guéry <jerome.guery@gmail.com>"]
description = "RS project"
homepage = "https://github.com/jsagfr/rs"
# license = "GPL-3.0"
license-file = "LICENSE"

[dependencies]
zmq = "0.8"
rmp-serde = "0.13.7"
serde = "1.0"
serde_derive = "1.0"
rand = "0.4"
nalgebra = "0.13"
clap = "2.29"
chan = "0.1"
lsm9ds1 = { git = 'https://github.com/jsagfr/lsm9ds1-rs.git' }

[features]
default = [ "nalgebra/serde-serialize" ]
 
